// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css-loader@3 default options 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@3 localsConvention asIs 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@3 localsConvention camelCase 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    barBaz: string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@3 with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@3 with locals export disabled 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss;

export = ExampleCssModule;
"
`;

exports[`css-loader@3 with no formatter 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    'bar-baz': string;
    'composed': string;
    'foo': string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;"
`;

exports[`css-loader@3 with prettier 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@3 with sourcemap 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest default options 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest localsConvention asIs 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest localsConvention camelCase 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    barBaz: string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with banner 1`] = `
"// autogenerated by typings-for-css-modules-loader
declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with locals export disabled 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss;

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with no formatter 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    'bar-baz': string;
    'composed': string;
    'foo': string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;"
`;

exports[`css-loader@latest with prettier 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;

exports[`css-loader@latest with sourcemap 1`] = `
"declare namespace ExampleCssNamespace {
  export interface IExampleCss {
    "bar-baz": string;
    composed: string;
    foo: string;
  }
}

declare const ExampleCssModule: ExampleCssNamespace.IExampleCss & {
  /** WARNING: Only available when \`css-loader\` is used without \`style-loader\` or \`mini-css-extract-plugin\` */
  locals: ExampleCssNamespace.IExampleCss;
};

export = ExampleCssModule;
"
`;
